JumpScript/tests/baselines/reference/templateStringInObjectLiteralES6.errors.txt
tests/cases/conformance/es6/templates/templateStringInObjectLiteralES6.jump(1,9): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type '{ a: string; }' has no compatible call signatures.
tests/cases/conformance/es6/templates/templateStringInObjectLiteralES6.jump(3,5): error TS1136: Property assignment expected.
tests/cases/conformance/es6/templates/templateStringInObjectLiteralES6.jump(3,8): error TS1005: ',' expected.
tests/cases/conformance/es6/templates/templateStringInObjectLiteralES6.jump(3,10): error TS1134: Variable declaration expected.
tests/cases/conformance/es6/templates/templateStringInObjectLiteralES6.jump(4,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/es6/templates/templateStringInObjectLiteralES6.jump (5 errors) ====
    var x = {
            ~
        a: `abc${ 123 }def`,
    ~~~~~~~~~~~~~~~~~~~~~~~~
        `b`: 321
    ~~~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type '{ a: string; }' has no compatible call signatures.
        ~~~
!!! error TS1136: Property assignment expected.
           ~
!!! error TS1005: ',' expected.
             ~~~
!!! error TS1134: Variable declaration expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.